--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,20 +1,51 @@
-<p id="notice"><%= notice %></p>
+<!--
+<p id="notice"><%#= notice %></p>
 
 <p>
   <strong>Name:</strong>
-  <%= @idea.name %>
+  <%#= @idea.name %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @idea.description %>
+  <%#= @idea.description %>
 </p>
 
 <p>
   <strong>Picture:</strong>
-  <%#= @idea.picture %>
-  <%= image_tag(@idea.picture_url, width: 600) if @idea.picture.present? %>
+  <%##= @idea.picture %>
+  <%#= image_tag(@idea.picture_url, width: 600) if @idea.picture.present? %>
+
+  <h3>Comments</h3>
+  <%# @comments.each do |comment| %>
+    <div>
+      <strong><%#= comment.user_name %></strong>
+      <br />
+      <p><%#= comment.body %></p>
+      <p><%#= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: '削除してもよろしいですか？' } %></p>
+    </div>
+  <%# end %>
+  <%#= render 'comments/form' %>
 </p>
 
-<%= link_to 'Edit', edit_idea_path(@idea) %> |
-<%= link_to 'Back', ideas_path %>
+<%#= link_to 'Edit', edit_idea_path(@idea) %> |
+<%#= link_to 'Back', ideas_path %>
+-->
+
+<p id="notice"><%= notice %></p>
+
+<div class="row">
+  <div class="span9">
+    <%= image_tag(@idea.picture_url, :width => "100%") if @idea.picture.present? %>
+  </div>
+
+  <div class="span3">
+    <p><b>Name: </b><%= @idea.name %></p>
+    <p><b>Description: </b><%= @idea.description %></p>
+    <p>
+      <%= link_to 'Edit', edit_idea_path(@idea) %> |
+      <%= link_to 'Destroy', @idea, confirm: 'Are you sure?', method: :delete %> |
+      <%= link_to 'Back', ideas_path %>
+    </p>
+  </div>
+</div>
